fix video and background not perfectly aligned

--- a/src/components/VideoCapture.scss
+++ b/src/components/VideoCapture.scss
@@ -36,3 +36,10 @@ $button-size: 20px;
     color: #111;
   }
 }
+
+.video-canvas {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: black;
+}
